--- a/rst/ch02/71.rst
+++ b/rst/ch02/71.rst
@@ -3,7 +3,7 @@
 
 .. code:: python
 
-   #多序列运算函数—map(function,iterabel,iterable2)
+   #多序列运算函数—map(function,iterable,iterable2)
    lst1=[1,2,3,4,5,6]
    lst2=[3,4,5,6,3,2]
    list(map(lambda x,y:x*y+1,lst1,lst2))
